[project]
name = "fastapi-tdd"
version = "0.1.0"
description = "Projeto de FastAPI usando TDD"
authors = [
    {name = "Taynara Bezzon",email = "taynarabezzon@outlook.com"}
]
license = {text = "^3.12"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.104.1,<0.105.0)",
    "uvicorn (>=0.24.0.post1,<0.25.0)",
    "pydantic (>=2.5.1,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "motor (>=3.3.1,<4.0.0)",
    "pytest (>=7.4.3,<8.0.0)",
    "pytest-asyncio (>=0.21.1,<0.22.0)",
    "pre-commit (>=3.5.0,<4.0.0)",
    "httpx (>=0.25.1,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
